rewrote example... in better shape now.  might still need to be replaced again.

--- a/paper/algorithm.tex
+++ b/paper/algorithm.tex
@@ -229,3 +229,6 @@ v   &\rightarrow& Reg \hspace{2mm}\bigg|\hspace{2mm}  Reg[i:j]  \hspace{2mm}\big
 \end{eqnarray*}
 \caption{The language of invariants.  Each $c$ represents a bitvector constant, $m$ represents a memory dereference, $n_i$ a count of basic block executions.  $Reg$ represents an \arch{} register and $Reg[i:j]$ represents a subregister.}
 \end{figure}
+
+\todo{explain verifying invariants}
+\todo{explain verifying correspondence}
