--- a/paper/example.tex
+++ b/paper/example.tex
@@ -1,45 +1,45 @@
 \section{Example}\label{example-sec}
 
 Consider the pair of C programs in Figure~\ref{exampleListing}. These
-functions take as input an array of alphabetic characters and swap the
-case of each one. The program in Figure~\ref{exampleTarget}, known as
-the target, iterates over the characters one at a time. The rewrite
-program, shown in Figure~\ref{exampleRewrite}, shows a typical way
-such a program may be vectorized by modern compilers. The steady-state
-loop (basic block 3) reads and operates on 8 bytes at a time. The
-purpose of the warm-up loop (basic block 2) is to operate one byte at
-a time until the pointer is aligned to an 8-byte boundary; this step
-improves performance for memory reads and writes (and is necessary in
-the case of instructions that operate on aligned memory). Lastly, the
-cool-down loop (basic block 4) operates on any remaining bytes once
-the steady-state loop is finished.
+functions take as input an array of 32-bit integers and flip the bits
+in each ones. The target (Figure~\ref{exampleTarget}) iterates over
+each integer in the array. The rewrite (Figure~\ref{exampleRewrite})
+illustrates how a compiler might use 64-bit registers to ``vectorize''
+this program. While this example is contrived, it is representative of
+a number of challenges exhibited in more complex benchmarks. In the
+rewrite, basic block 3 is the steady-state loop. The branch preceding
+(block 2) is similar to a warm-up loop in real vectorized code; the
+purpose is to align the iterations of the steady state loop to a
+cache-line boundary. The branch following the loop (block 4) performs
+the computation on the last element of the array, if necessary.
 
 \begin{figure}\label{exampleListing}
 \begin{lstlisting}[language=C]
-void swap_case(char* s, int len) {
-  for(int i = 0; i < len; i++,r++) {
+void bitflip(int* array, int len) {
+  for(int i = 0; i < len; i++) {
     // block 1
-    *s ^= 0x20;
+    array[i] ^= 0xffffffff;
   }
 }
 \end{lstlisting}
 \subcaption{Target}\label{exampleTarget}
 \begin{lstlisting}[language=C]
-void swap_case(char* s, int len) {
+void bitflip(int* array, int len) {
   // block 1
-  int i = 0;        
-  for(; i < len &&
-      (uintptr_t)s % 8 != 0; i++, s++) {
+  int i = 0;
+  if((uint_ptr_t)array % 8 == 0) {
     // block 2
-    *s ^= 0x20;                             
-  }
-  for(; i + 7 < len; i += 8, s += 8) {
+    *array ^= 0xffffffff;
+    array++;
+  } 
+  while(; i + 1 < len; i += 2) {
     // block 3
-    *((uint64_t*)s) ^= 0x2020202020202020;
+    *((long)array) ^= 0xffffffffffffffff;
+    array += 2;
   }
-  for(; i < len; i++, s++) {
+  if(i < len) {
     // block 4
-    *s ^= 0x20;            
+    *array ^= 0xffffffff;
   }
 }
 \end{lstlisting}
@@ -48,14 +48,66 @@ void swap_case(char* s, int len) {
 
 To the best of our knowledge, no existing automatic verification
 techniques exist to prove these two functions equivalent (unless the
-compiler is instrumented to generate verification conditions, as in
-the case of translation validation).
+compiler is instrumented to generate verification conditions, as is
+sometimes the case of translation validation).
 
-One approach to proving equivalence based on the existing literature
-would be to show that 8 iterations of block 1 in the target are
-equivalent to 1 iteration of block 3 in the rewrite (and unrolling the
-warm-up and cool-down loops to reason about them in a bounded way).
-Then, we need to learn a loop invariant relating the machine states
-after each of these iterations. However, the invariant needed depends
-on the path taken to this pair of program points!  
+In our technique, we provide a set of test cases. For this example,
+using random arrays of varying length located at different addresses
+modulo 8 would be sufficient. We run the programs with the test data,
+and make observations about the control flow. For a given test case,
+let $n_i$ represent the number of times basic block $i$ is executed in
+the target and $n_i'$ represent the number of times basic block $j$
+is executed in the rewrite. We observe (Section~\ref{}) the following
+equality holds over all test cases: $n_1 = n_2' + 2*n_3' + n_4'$. From
+here, we conclude that one iteration of basic block 3 corresponds to
+two iterations of basic block 1.
 
+At this point, one might try to use the data to learn an invariant
+relating the program states at the heads of both loops that holds on
+an initial iteration and also holds after corresponding iterations
+(two of the target and one of the rewrite). \todo{rewrite this using
+cutpoint terminology} For this example, that approach fails unless the
+invariant language includes disjunctions and reasons about modular
+arithmetic. More generally, in more complex examples, (i) it could be
+unclear which paths in the target correspond to which paths in the
+rewrite, and (ii) generating the correct invariants could require
+reasoning about arbitrary branch conditions.\todo{this needs further
+clarification, especially around point (i) which is the bigger
+problem}
+
+To see this, consider the invariant $i' - i = 0 \wedge array' - array
+= 0 \wedge len = len'$. This holds only if block 2 of the rewrite
+never executes, namely when the array is stored at an 8-byte boundary.
+On the other hand, if the array is stored at an 8-byte boundary, the
+desired invariant is $i' - i = 1 \wedge array' - array = 4 \wedge len
+= len'$. Without introducing disjunctions, this approach won't work.
+
+Our solution involves three ideas:
+
+\begin{itemize}
+\item Parameterizing invariants by basic block counts
+\item Learning invariants that hold regardless of the control flow path(s) taken to reach a cutpoint
+\item Partitioning paths to a cutpoint 
+\end{itemize}
+
+In this example, we observe that for any execution traces of the two
+programs that end at the cutpoint, the following relationships hold:
+$array' - array = 8n_3' + 4n_2' - 4n_1$ and $i' - i = 2*n_3' + n_2' -
+n_1$. We rearrange these invariants: $8n_3' - 4n_1 = array' - array
+- 4n_2'$ and $2n_3' - n_1' = i' - i - n_2'$. The key is that, after
+an iteration of the corresponding paths, the left hand side does not
+change. Thus we can conclude that the appropriate invariant to use is
+of the form $array' - array - 4n_2' = k_1 \wedge i' - i - n_2' = k_2
+\wedge len = len'$ for some choice of $k_1$ and $k_2$. Looking at the
+paths from the program entries to the cutpoint, it's clear that $k_1
+= k_2 = 0$ is a suitable choice (but incidentally, other choices work
+too).
+
+Moreover, the choice of $k_1$ and $k_2$ above induce an equivalence
+relation on paths from the entry of the two programs to the cutpoint.
+\todo{give examples of the relation}. In more challenging examples, we
+can brute-force the choices of $k_1$ and $k_2$ until we find a correct
+\bisimrep{} that we can verify.
+
+\todo{show \bisimrep{} for this example}
+\todo{explain how we verify the \bisimrep}
