--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -1,2 +1,5 @@
 \section{Introduction}
+\todo{write me}
+
+\todo{definitely need to address what the target and rewrite are, the notion of control flow correspondence / product programs}
 
