--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -17,3 +17,5 @@
 \newcommand{\cutpoints}{cutpoints}
 \newcommand{\controlflowmatrix}{M_{controlflow}}
 \newcommand{\controlflownullmatrix}{M_{controlflownull}}
+\newcommand{\totalbench}{26}
+\newcommand{\libc}{libc}
