--- a/paper/pldi2019.bib
+++ b/paper/pldi2019.bib
@@ -107,3 +107,30 @@
  year = {2000},
  pages = {83--94},
 } 
+
+@inproceedings{Massalin1987,
+ author = {Massalin, Henry},
+ title = {Superoptimizer: A Look at the Smallest Program},
+ booktitle = {Proceedings of the Second International Conference on Architectual Support for Programming Languages and Operating Systems},
+ series = {ASPLOS},
+ pages = {122--126},
+} 
+
+@article{Schkufza2013,
+ author = {Schkufza, Eric and Sharma, Rahul and Aiken, Alex},
+ title = {Stochastic Superoptimization},
+ journal = {SIGPLAN Not.},
+ issue_date = {April 2013},
+ volume = {48},
+ number = {4},
+ year = {2013},
+ pages = {305--316},
+} 
+
+@manual{sagemath,
+  Key          = {SageMath},
+  Author       = {{The Sage Developers}},
+  Title        = {{S}ageMath, the {S}age {M}athematics {S}oftware {S}ystem ({V}ersion 7.5.1)},
+  note         = {{\tt http://www.sagemath.org}},
+  Year         = {2017},
+}
