--- a/paper/pldi2019.tex
+++ b/paper/pldi2019.tex
@@ -67,7 +67,7 @@
 \begin{document}
 
 %% Title information
-\title[Short Title]{Full Title}         %% [Short Title] is optional;
+\title[]{Data-Driven Bisimulation Inference for Equivalence Checking with Control Flow Optimizations}         %% [Short Title] is optional;
                                         %% when present, will be used in
                                         %% header instead of Full Title.
 %\titlenote{with title note}             %% \titlenote is optional;
