--- a/paper/example.tex
+++ b/paper/example.tex
@@ -2,16 +2,16 @@
 
 Consider the pair of C programs in Figure~\ref{exampleListing}. These
 functions take as input an array of 32-bit integers and flip the bits
-in each ones. The target (Figure~\ref{exampleTarget}) iterates over
+in each one. The target (Figure~\ref{exampleTarget}) iterates over
 each integer in the array. The rewrite (Figure~\ref{exampleRewrite})
 illustrates how a compiler might use 64-bit registers to ``vectorize''
 this program. While this example is contrived, it is representative
 of a number of challenges exhibited in complex benchmarks that arise
 naturally. In the rewrite, basic block 3 is the steady-state loop.
-The branch preceding (block 2) is similar to a warm-up loop in real
+The preceding block (block 2) is similar to a warm-up loop in real
 vectorized code; the purpose is to align the iterations of the steady
-state loop to a cache-line boundary (in this example that the `array'
-input is 4-byte aligned, but we wish to align it to 8 bytes). The
+state loop to a cache-line boundary (in this example we assume that the `array'
+input is already 4-byte aligned, but we wish to align it to 8 bytes). The
 branch following the loop (block 4) performs the computation on the
 last element of the array, if necessary.
 
@@ -33,6 +33,7 @@ void bitflip(int* array, int len) {
     // block 2
     *array ^= 0xffffffff;
     array++;
+    i++;
   } 
   while(; i + 1 < len; i += 2) {
     // block 3
@@ -59,7 +60,7 @@ modulo 8 would be sufficient. We run the programs with the test data,
 and make observations about the control flow. For a given test case,
 let $n_i$ represent the number of times basic block $i$ is executed in
 the target and $n_i'$ represent the number of times basic block $j$
-is executed in the rewrite. We observe (Section~\ref{}) the following
+is executed in the rewrite. We observe the following
 equality holds over all test cases: $n_1 = n_2' + 2*n_3' + n_4'$. From
 here, we conclude that one iteration of basic block 3 corresponds
 to two iterations of basic block 1. We identify three cutpoints
@@ -76,13 +77,13 @@ problems: (i) it could be unclear which paths in the target
 correspond to which paths in the rewrite, and (ii) generating the
 correct invariants could require reasoning about arbitrary branch
 conditions. The first of these problems is more significant; there
-are any unbounded number of paths from the entry cutpoint to an
+are an unbounded number of paths from the entry cutpoint to an
 interior cutpoint because these paths may include loops.  As a result,
 identifying which paths in the target correspond to which in the
 rewrite is non-trivial -- especially if the branch conditions differ
 -- and different pairs of paths may yield different invariants.
 
-To see this, consider the invariant $i' - i = 0 \wedge array' - array
+Consider the invariant $i' - i = 0 \wedge array' - array
 = 0 \wedge len = len'$. This holds only if block 2 of the rewrite
 never executes, namely when the array is stored at an 8-byte boundary.
 On the other hand, if the array is stored at an 8-byte boundary, the
@@ -99,22 +100,53 @@ Our solution involves three ideas:
 
 In this example, we observe that for any execution traces of the two
 programs that end at the cutpoint, the following relationships hold:
-$array' - array = 8n_3' + 4n_2' - 4n_1$ and $i' - i = 2*n_3' + n_2' -
-n_1$.  Most importantly, these hold \emph{regardless of the paths taken}.  We rearrange these invariants: $8n_3' - 4n_1 = array' - array
-- 4n_2'$ and $2n_3' - n_1' = i' - i - n_2'$.  Observe that, after
-an iteration of the corresponding loops, the left hand side does not
-change. Thus we can conclude that the appropriate invariant to use is
-of the form $array' - array - 4n_2' = k_1 \wedge i' - i - n_2' = k_2
-\wedge len = len'$ for some choice of $k_1$ and $k_2$. Looking at the
-paths from the program entries to the cutpoint, it's clear that $k_1
-= k_2 = 0$ is a suitable choice (but other choices may work
-too).
+$array' - array = 8n_3' + 4n_2' - 4n_1$ and $i' - i = 2*n_3' + n_2'
+- n_1$. Most importantly, these hold \emph{regardless of the paths
+taken}. We could attempt to prove these control-flow insensitive
+invariants directly, however doing so in general is difficult. That's
+because one would need to fully reason about the execution of both
+program, without taking advantage of the correspondence with the other
+that illustrates the equality.
 
-Moreover, the choice of $k_1$ and $k_2$ above induce an equivalence
-relation on paths from the entry of the two programs to the cutpoint.
-\todo{give examples of the relation}. In more challenging examples, we
-can brute-force the choices of $k_1$ and $k_2$ until we find a correct
-\bisimrep{} that we can verify.
+Instead, we rearrange these invariants: $8n_3' - 4n_1 = array' - array
+- 4n_2'$ and $2n_3' - n_1' = i' - i - n_2'$. Observe that, after an
+iteration of the corresponding loops (i.e. 4 iterations of basic block
+1 in the target, and 1 iteration of basic block 3 in the rewrite),
+the left hand sides of both invariants remain constant. Thus we can
+conclude that the appropriate invariant to use is of the form $array'
+- array - 4n_2' = k_1 \wedge i' - i - n_2' = k_2 \wedge len = len'$
+for some choice of $k_1$ and $k_2$. The choice of $k_1$ and $k_2$
+induce an equivalence relation on paths from the entry of the two
+programs to $B$ cutpoint. Consider the pairs of paths $P$ and $Q$
+ending at this cutpoint shown in Figure~\ref{fig:egpaths} that include
+at most two iterations of each loop. For each path, we can compute the
+values of $k_1$ and $k_2$. Two paths are equivalent if their values
+for $k_1$ and $k_2$ match. We see that, in this selection of paths,
+there are four equivalence classes.
 
-\todo{show \bisimrep{} for this example}
-\todo{explain how we verify the \bisimrep}
+\begin{figure}
+\begin{tabular}{|ll|cccc|}
+\hline
+$P$       & $Q$ & $n_2'$ & $i'-i$ & $k_1$ & $k_2$ \\ \hline  \hline
+1  & 13      &  0 & 1  & 4 & 1  \\
+1  & 123     &  1 & 2  & 4 & 1  \\
+1  & 133     &  0 & 3  & 12 & 3  \\
+1  & 1233    &  1 & 4  & 12 & 3  \\
+11 & 13      &  0 & 0  & 0 & 0  \\
+11 & 123     &  1 & 1  & 0 & 0  \\
+11 & 133     &  0 & 2  & 8 & 2  \\
+11 & 1233    &  1 & 3  & 8 & 2  \\ \hline
+\end{tabular}
+\caption{Selected paths from the entry to the first cutpoint.}
+\label{fig:egpaths}
+\end{figure}
+
+For any given equivalence class, we can construct a \bisimrep{} and
+check if it induces a bisimulation on the two programs. For example,
+take the class with $k_1 = 4$ and $k_2 = 1$. We start with the
+\bisimrep{} that contains 3 nodes, each corresponding to a cutpoint.
+Then we add edges $(1,13)$ and $(1,123)$ and the self-edge $(11,3)$.
+Lastly, we use the control flow relationships found at the beginning
+to identify edges from cutpoint $B$ to cutpoint $C$. \todo{compute
+this and create figure with full graph}. Finally, we verify the proof
+obligations described in Section~\ref{sec:proofobl}.
