--- a/paper/background.tex
+++ b/paper/background.tex
@@ -29,7 +29,7 @@ A consequence of our definition's sensitivity to run-time errors and
 infinite loops is that we seek a bisimulation relation, rather than a
 simulation relation, to demonstrate equivalence.
 
-\subsection{Bisimulation Relations}\ref{sec:proofobl}
+\subsection{Bisimulation Relations}\label{sec:proofobl}
 
 \todo{bisimulation relation definition}
 
